--- a/src/pages/courses.jade
+++ b/src/pages/courses.jade
@@ -4,7 +4,7 @@ html(lang='en')
   include ../templates/mixins.jade
   
   body
-    +header
+    +header('', 'menu--center')
     .wrapper
       .divided-page
         .page-half.animsition
