--- a/src/styles/blocks/content.less
+++ b/src/styles/blocks/content.less
@@ -98,7 +98,7 @@
     vertical-align: middle;
     font-family: @font-family-main;
 
-    @media screen and (max-width: @screen-sm) {
+    @media screen and (max-width: @screen-xs) {
       
       &:nth-child(n+3) {
         display: none;
@@ -115,7 +115,7 @@
     color: #646464;
     font-family: @font-family-main;
 
-    @media screen and (max-width: @screen-sm) {
+    @media screen and (max-width: @screen-xs) {
       
       &:nth-child(n+3) {
         display: none;
