--- a/src/pages/404.jade
+++ b/src/pages/404.jade
@@ -4,7 +4,7 @@ html(lang='en')
   include ../templates/mixins.jade
   
   body
-    +header
+    +header('', 'menu--center')
     .wrapper
       .error
         .error__header Такой страницы не существует
