--- a/src/pages/calendar.jade
+++ b/src/pages/calendar.jade
@@ -4,7 +4,7 @@ html(lang='en')
   include ../templates/mixins.jade
   
   body
-    +header
+    +header('', 'menu--center')
     .wrapper
       .calendar
         .calendar__top
