--- a/src/pages/contacts.jade
+++ b/src/pages/contacts.jade
@@ -8,8 +8,7 @@ html(lang='en')
     .wrapper
       .divided-page
         .page-half
-          .map
-            iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1540.6352039274514!2d37.54672145273868!3d55.799654167037104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!3m2!1sru!2sby!4v1473708963468", frameborder="0", style="border:0", allowfullscreen)
+          .map#map
         .page-half
           .content
             h2.content__header-big Наши контакты
