--- a/src/pages/gallery.jade
+++ b/src/pages/gallery.jade
@@ -4,7 +4,7 @@ html(lang='en')
   include ../templates/mixins.jade
   
   body
-    +header
+    +header('', 'menu--center')
     .wrapper
       ul.gallery
         li.gallery__item
