--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -5,7 +5,7 @@ html(lang='en')
   
   body
     .slider-main
-    +header
+    +header('', 'menu--center')
     .wrapper
       .title
         h1.title__content Студия пилатес
