--- a/src/styles/blocks/calendar.less
+++ b/src/styles/blocks/calendar.less
@@ -39,6 +39,7 @@
     padding: 0 40px;
     font-size: 18px;
     text-transform: lowercase;
+    white-space: nowrap;
     
     @media screen and (max-width: @screen-sm) {
       padding: 0;
@@ -61,6 +62,10 @@
       background-position: 218px 16px;
       text-transform: none;
       
+      &:focus {
+        outline: none;
+      }
+      
       option {
         color: #fff;
       }
@@ -70,11 +75,11 @@
   &__dates {
     display: flex;
     align-items: center;
-    margin-top: 25px;
     
     @media screen and (max-width: @screen-md) {
       width: 100%;
       justify-content: space-between;
+      margin-top: 25px;
     }
   }
   
@@ -83,6 +88,7 @@
     color: #fff;
     font-family: @font-family-main;
     margin: 0 30px;
+    white-space: nowrap;
     
     @media screen and (max-width: @screen-md) {
       font-size: 14px;
