--- a/src/styles/blocks/gallery.less
+++ b/src/styles/blocks/gallery.less
@@ -3,15 +3,15 @@
   display: flex;
   height: 100%;
   flex-flow: row wrap;
-  flex-direction: column;
-  flex-wrap: nowrap;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
   padding: 140px 0 90px;
   transition: @transition;
 
-  @media screen and (max-width: @screen-md) {
+  @media screen and (max-width: 1294px) {
     width: 100%;
     padding-left: 15px;
     padding-right: 15px;
@@ -19,9 +19,11 @@
   
   &__item {
     position: relative;
+    max-width: 33%;
 
     @media screen and (max-width: @screen-md) {
       width: 31%;
+      max-width: none;
     }
 
     @media screen and (max-width: @screen-sm) {
