--- a/src/templates/head.jade
+++ b/src/templates/head.jade
@@ -2,6 +2,7 @@ head
   meta(charset="UTF-8")
   meta(http-equiv="X-UA-Compatible", content="IE=Edge")
   title Title
+  script(type="text/javascript", src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU")
   link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:100,400,500&subset=cyrillic')
   link(rel='stylesheet', href='css/style.css')
   meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0")
