--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -4,7 +4,10 @@ html(lang='en')
   include ../templates/mixins.jade
   
   body
-    .slider-main
+    .slider-main.backstretch
+      //.slider-main__item.slider-main__item--first
+      //.slider-main__item.slider-main__item--second
+      //.slider-main__item.slider-main__item--third
     +header('', 'menu--center')
     .wrapper
       .title
