--- a/src/templates/mixins.jade
+++ b/src/templates/mixins.jade
@@ -32,6 +32,7 @@ mixin footer(footerClass, phoneClass, socialsClass)
   script(type="text/javascript", src="js/jquery.min.js")
   script(type="text/javascript", src="js/jquery.fancybox.pack.js")
   script(type="text/javascript", src="js/animsition.min.js")
+  script(type="text/javascript", src="js/jquery.backstretch.min.js")
   script(type="text/javascript", src="js/script.js")
 
 
