--- a/src/styles/blocks/slider-main.less
+++ b/src/styles/blocks/slider-main.less
@@ -5,6 +5,28 @@
   width: 100%;
   height: 100%;
   background: url(../img/main-bg-1.jpg) no-repeat left bottom;
+  background-size: auto 100%;
+  
+  img {
+    
+    @media screen and (max-width: @screen-md) {
+      left: 0!important;
+      bottom: 0!important;
+      top: auto!important;
+    }
+  }
+    
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: .38;
+    display: block;
+  }
     
   @media screen and (max-width: @screen-md) {
     background-position: bottom left!important;
@@ -15,24 +37,27 @@
     background-size: 170% auto!important;
   }
   
-  &__item {
-    width: 100%;
-    height: 100%;
-    
-    &:focus {
-      outline: 0;
-    }
-    
-    &:before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: #000;
-      opacity: .38;
-      display: block;
-    }
-  }
+//  &__item {
+//    width: 100%;
+//    height: 100%;
+//    
+////    &--first {
+////      display: block;
+////      background: url(http://placehold.it/1920x1080) no-repeat left bottom;
+////    }
+////    
+////    &--second {
+////      display: none;
+////      background: url(http://placehold.it/1919x1080) no-repeat left bottom;
+////    }
+////    
+////    &--third {
+////      display: none;
+////      background: url(http://placehold.it/1921x1080) no-repeat left bottom;
+////    }
+//    
+//    &:focus {
+//      outline: 0;
+//    }
+//  }
 }
