fix calendar hover

--- a/src/pages/calendar.jade
+++ b/src/pages/calendar.jade
@@ -38,7 +38,7 @@ html(lang='en')
             .calendar__time 20:00
             .calendar__time 21:00
           .calendar__column
-            .calendar__header-item Пн. 15
+            a.calendar__header-item(href="#") Пн. 15
             .calendar__courses-container
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
@@ -62,7 +62,7 @@ html(lang='en')
               .calendar__course
               .calendar__course
           .calendar__column.calendar__column--active
-            .calendar__header-item.calendar__header-item--active Вт. 16
+            a.calendar__header-item(href="#").calendar__header-item--active Вт. 16
             .calendar__courses-container
               .calendar__course
               a.calendar__course.calendar__course--full.calendar__course--active(href="#modal", data-entry)
@@ -86,7 +86,7 @@ html(lang='en')
               .calendar__course
               .calendar__course
           .calendar__column
-            .calendar__header-item Ср. 17
+            a.calendar__header-item(href="#") Ср. 17
             .calendar__courses-container
               .calendar__course
               .calendar__course
@@ -116,7 +116,7 @@ html(lang='en')
                 p.calendar__course-name Кол-во мест: 2
               .calendar__course
           .calendar__column
-            .calendar__header-item Чт. 18
+            a.calendar__header-item(href="#") Чт. 18
             .calendar__courses-container
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Функциональный тренинг
@@ -140,7 +140,7 @@ html(lang='en')
               .calendar__course
               .calendar__course
           .calendar__column
-            .calendar__header-item Пт. 19
+            a.calendar__header-item(href="#") Пт. 19
             .calendar__courses-container
               .calendar__course
               .calendar__course
@@ -164,7 +164,7 @@ html(lang='en')
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
           .calendar__column
-            .calendar__header-item Сб. 20
+            a.calendar__header-item(href="#") Сб. 20
             .calendar__courses-container
               .calendar__course
               .calendar__course
@@ -185,7 +185,7 @@ html(lang='en')
               .calendar__course
               .calendar__course
           .calendar__column
-            .calendar__header-item Вс. 21
+            a.calendar__header-item(href="#") Вс. 21
             .calendar__courses-container
               .calendar__course
               .calendar__course
