--- a/src/styles/blocks/menu.less
+++ b/src/styles/blocks/menu.less
@@ -118,12 +118,16 @@
       transition-timing-function: cubic-bezier(1, 0.68, 0.16, 0.9);
     }
     
-    &--active, &:hover {
+    &:hover {
       color: @color-main;
       
       &:after {
         transform: scale3d(1, 1, 1);
       }
+    }
+    
+    &--active {
+      color: @color-main;
     }
   }
   
