--- a/src/pages/calendar.jade
+++ b/src/pages/calendar.jade
@@ -20,187 +20,289 @@ html(lang='en')
             .calendar__dates-range 15 августа - 21 августа
             a.calendar__dates-button.calendar__dates-button--future(href="#") Следующая неделя
         .calendar__content
-          .calendar__column
+          .calendar__row
             .calendar__header-item.calendar__header-item--icon
-            .calendar__time 07:00
-            .calendar__time 08:00
-            .calendar__time 09:00
-            .calendar__time 10:00
-            .calendar__time 11:00
-            .calendar__time 12:00
-            .calendar__time 13:00
-            .calendar__time 14:00
-            .calendar__time 15:00
-            .calendar__time 16:00
-            .calendar__time 17:00
-            .calendar__time 18:00
-            .calendar__time 19:00
-            .calendar__time 20:00
-            .calendar__time 21:00
-          .calendar__column
             a.calendar__header-item(href="#") Пн. 15
-            .calendar__courses-container
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Пилатес
-                p.calendar__course-trainer Елена Смолина
-                p.calendar__course-name Кол-во мест: 2
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Пилатес
-                p.calendar__course-trainer Елена Смолина
-                p.calendar__course-name Кол-во мест: 2
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-          .calendar__column.calendar__column--active
-            a.calendar__header-item(href="#").calendar__header-item--active Вт. 16
-            .calendar__courses-container
-              .calendar__course
-              a.calendar__course.calendar__course--full.calendar__course--active(href="#modal", data-entry)
-                p.calendar__course-name Функциональный тренинг
-                p.calendar__course-trainer Андрей Смольный
-                p.calendar__course-name Кол-во мест: 0
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Функциональный тренинг
-                p.calendar__course-trainer Андрей Смольный
-                p.calendar__course-name Кол-во мест: 0
-              .calendar__course
-              .calendar__course
-              .calendar__course
-          .calendar__column
+            a.calendar__header-item.calendar__header-item--active(href="#") Вт. 16
             a.calendar__header-item(href="#") Ср. 17
-            .calendar__courses-container
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Пилатес
-                p.calendar__course-trainer Елена Смолина
-                p.calendar__course-name Кол-во мест: 2
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Пилатес
-                p.calendar__course-trainer Елена Смолина
-                p.calendar__course-name Кол-во мест: 2
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Функциональный тренинг
-                p.calendar__course-trainer Андрей Смольный
-                p.calendar__course-name Кол-во мест: 0
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Пилатес
-                p.calendar__course-trainer Елена Смолина
-                p.calendar__course-name Кол-во мест: 2
-              .calendar__course
-          .calendar__column
             a.calendar__header-item(href="#") Чт. 18
-            .calendar__courses-container
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Функциональный тренинг
-                p.calendar__course-trainer Андрей Смольный
-                p.calendar__course-name Кол-во мест: 0
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Функциональный тренинг
-                p.calendar__course-trainer Андрей Смольный
-                p.calendar__course-name Кол-во мест: 0
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-          .calendar__column
             a.calendar__header-item(href="#") Пт. 19
-            .calendar__courses-container
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Пилатес
-                p.calendar__course-trainer Елена Смолина
-                p.calendar__course-name Кол-во мест: 2
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              a.calendar__course.calendar__course--full(href="#modal", data-entry)
-                p.calendar__course-name Пилатес
-                p.calendar__course-trainer Елена Смолина
-                p.calendar__course-name Кол-во мест: 2
-          .calendar__column
             a.calendar__header-item(href="#") Сб. 20
+            a.calendar__header-item(href="#") Вс. 21
+          .calendar__row
+            a.calendar__time(href="#") 07:00
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
             .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time.calendar__time--active(href="#") 08:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--active.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 09:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 10:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 11:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 12:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 13:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 14:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 15:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 16:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 17:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+          .calendar__row
+            a.calendar__time(href="#") 18:00
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 19:00
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
               .calendar__course
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-          .calendar__column
-            a.calendar__header-item(href="#") Вс. 21
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
             .calendar__courses-container
               .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 20:00
+            .calendar__courses-container
               .calendar__course
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
               .calendar__course
+          .calendar__row
+            a.calendar__time(href="#") 21:00
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
               .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
-              .calendar__course
+            .calendar__courses-container
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
               .calendar__course
     +footer
     +modal
