--- a/src/pages/calendar.jade
+++ b/src/pages/calendar.jade
@@ -31,7 +31,9 @@ html(lang='en')
             a.calendar__header-item(href="#") Вс. 21
           .calendar__row
             a.calendar__time(href="#") 07:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
@@ -54,9 +56,14 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time.calendar__time--active(href="#") 08:00
+            .calendar__courses-container.calendar__courses-container--device
+              a.calendar__course.calendar__course--full.calendar__course--active(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
             .calendar__courses-container
               .calendar__course
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--active.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
@@ -65,22 +72,24 @@ html(lang='en')
               .calendar__course
             .calendar__courses-container
               .calendar__course
-            .calendar__courses-container
-              .calendar__course
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
             .calendar__courses-container
               .calendar__course
+            .calendar__courses-container
+              .calendar__course
           .calendar__row
             a.calendar__time(href="#") 09:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
@@ -93,45 +102,51 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 10:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
-            .calendar__courses-container
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 11:00
+            .calendar__courses-container.calendar__courses-container--device
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
-            .calendar__courses-container
-              .calendar__course
-            .calendar__courses-container
-              .calendar__course
-            .calendar__courses-container
-              .calendar__course
           .calendar__row
             a.calendar__time(href="#") 12:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
@@ -144,32 +159,40 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 13:00
+            .calendar__courses-container.calendar__courses-container--device
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
-            .calendar__courses-container
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 14:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
-            .calendar__courses-container
-              .calendar__course
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -178,11 +201,13 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 15:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
@@ -191,6 +216,8 @@ html(lang='en')
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -199,24 +226,26 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 16:00
+            .calendar__courses-container.calendar__courses-container--device
+              .calendar__course
+            .calendar__courses-container
+              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
-            .calendar__courses-container
-              .calendar__course
-            .calendar__courses-container
-              .calendar__course
             .calendar__courses-container
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 17:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
             .calendar__courses-container
               .calendar__course
@@ -227,17 +256,25 @@ html(lang='en')
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
           .calendar__row
             a.calendar__time(href="#") 18:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -250,7 +287,7 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 19:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
             .calendar__courses-container
               .calendar__course
@@ -260,6 +297,7 @@ html(lang='en')
               .calendar__course
             .calendar__courses-container
               .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
@@ -268,12 +306,19 @@ html(lang='en')
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
             .calendar__courses-container
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 20:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
@@ -289,7 +334,7 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 21:00
-            .calendar__courses-container
+            .calendar__courses-container.calendar__courses-container--device
               .calendar__course
             .calendar__courses-container
               .calendar__course
@@ -298,10 +343,14 @@ html(lang='en')
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
+              .calendar__course
+            .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
                 p.calendar__course-name Кол-во мест: 2
+            .calendar__courses-container
+              .calendar__course
             .calendar__courses-container
               .calendar__course
     +footer
