--- a/src/styles/blocks/calendar.less
+++ b/src/styles/blocks/calendar.less
@@ -1,8 +1,12 @@
 .calendar {
   margin: 144px 14px 120px;
-//  background: url(../img/calendar-bg.png) no-repeat center 123px;
+  background: url(../img/calendar-bg.png) no-repeat center 123px;
     
   @media screen and (max-width: @screen-md) {
+    background-position: center 123px;
+  }
+    
+  @media screen and (max-width: @screen-sm) {
     background-position: center 250px;
   }
   
