calendar div fix

--- a/src/styles/blocks/calendar.less
+++ b/src/styles/blocks/calendar.less
@@ -227,7 +227,7 @@
       display: none
     }
     
-    &--device {
+    &--active {
       display: none;
       
       @media screen and (max-width: @screen-md) {
