--- a/src/pages/calendar.jade
+++ b/src/pages/calendar.jade
@@ -31,8 +31,6 @@ html(lang='en')
             a.calendar__header-item(href="#") Вс. 21
           .calendar__row
             a.calendar__time(href="#") 07:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
@@ -56,7 +54,7 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time.calendar__time--active(href="#") 08:00
-            .calendar__courses-container.calendar__courses-container--device
+            .calendar__courses-container.calendar__courses-container--active
               a.calendar__course.calendar__course--full.calendar__course--active(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
                 p.calendar__course-trainer Елена Смолина
@@ -83,8 +81,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 09:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -102,8 +98,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 10:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -121,8 +115,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 11:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -140,8 +132,6 @@ html(lang='en')
                 p.calendar__course-name Кол-во мест: 2
           .calendar__row
             a.calendar__time(href="#") 12:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -159,8 +149,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 13:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -180,8 +168,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 14:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
@@ -201,8 +187,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 15:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -226,8 +210,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 16:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -245,10 +227,11 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 17:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
-            .calendar__courses-container
-              .calendar__course
+            .calendar__courses-container.calendar__courses-container--active
+              a.calendar__course.calendar__course--full(href="#modal", data-entry)
+                p.calendar__course-name Пилатес
+                p.calendar__course-trainer Елена Смолина
+                p.calendar__course-name Кол-во мест: 3
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -266,8 +249,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 18:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
@@ -287,8 +268,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 19:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
@@ -316,8 +295,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 20:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container.calendar__courses-container--full
               a.calendar__course.calendar__course--full(href="#modal", data-entry)
                 p.calendar__course-name Пилатес
@@ -334,8 +311,6 @@ html(lang='en')
               .calendar__course
           .calendar__row
             a.calendar__time(href="#") 21:00
-            .calendar__courses-container.calendar__courses-container--device
-              .calendar__course
             .calendar__courses-container
               .calendar__course
             .calendar__courses-container
